# mining_farm

./: exceptions.py  main.py  pyproject.toml
adapters/: __init__.py  controller.py  flask_api.py  transactions.json
adapters/static/css/: transaction_list.css
adapters/templates/: base.html  transaction_list.html  wallet_dashboard.html
entities/: block.py  transaction.py
infrastructure/: crypto.py
use_cases/: wallet_operations.py
